# ContentFlow

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile.llm-worker  Dockerfile.publisher  Dockerfile.scrapper  GET_POSTS_README.md  LICENSE  README.md  SESSION_SETUP.md  WORKERS_README.md  auto_generate_session.py  docker-compose.yml  generate_pyrogram_session.py  generate_session.py  generate_session_telethon.py  generate_user_session.py  pyproject.toml  setup.py  telethon_session_string.txt  test_channel_access.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  auth.py  check_posts.py  check_posts_media.py  check_settings.py  config.py  create_ai_models_table.py  crud.py  get_channel_posts.py  llm_worker.py  main.py  models.py  openrouter_service.py  publisher.py  pyproject.toml  run_migration.py  schemas.py  scrapper.py  seed_ai_models.py  start.py  telegram_scraper_service.py  telegram_service.py  test_channel_access.py  test_client.py  test_newlines.py  upload_service.py  worker.py
backend/alembic/: env.py
backend/alembic/versions/: 001_make_source_channel_id_nullable.py  002_add_rewrite_prompt_to_target_channels.py  52bbf3e01300_add_llm_classification_result_field.py  591991aec511_merge_heads.py  add_llm_worker_status.py  b6e8d5e2e2c5_add_scheduled_at_column_to_posts_table.py  c7f8a9b1d2e3_add_ai_models_table.py  df47291c362a_add_workerstatus_model.py  e3f4a5b6c7d8_add_is_manual_column_to_posts_table.py  fddf832a8a36_make_is_manual_not_nullable.py  g8h9i0j1k2l3_add_scrapper_publisher_status.py  h4i5j6k7l8m9_add_llm_classification_fields.py
backend/services/: llm_classifier.py
backend/workers/: llm_worker.py
frontend/: Dockerfile  SHADCN_UI_INTEGRATION.md  components.json  package.json  tailwind.config.js  tsconfig.json
(+82 files in other folders)
